--- a/components/backend-tests-go-gksagsjs/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-gksagsjs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-gksagsjs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-gksagsjs:028627d9a8ce263828cfd5e01d06680a78e5e01d@sha256:2aa157bb1ac544e2e3a0ca843793fbd5fcb703966cc1cadc1f5ebfdaee725e16
+          name: container-image
